--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   "require": {
     "php": "7.3.*",
     "ext-simplexml": "*",
-    "symfony/framework-bundle": "^4.0"
+    "symfony/framework-bundle": "^4.0|5.*"
   },
   "autoload": {
     "psr-4": {
